# pulse-linux-hq-sidecar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
examples/: capture_encode_smoke.rs  capture_smoke.rs  encode_smoke.rs  test_driver.rs  tls_probe.rs
src/: caps.rs  dispatch.rs  events.rs  lib.rs  logging.rs  main.rs  profiles.rs  proto.rs  redact.rs  stream_controller.rs
src/capture/: audio.rs  audio_router.rs  egl_modifiers.rs  mod.rs  pipewire_stream.rs  portal.rs
src/encode/: audio.rs  hw.rs  mod.rs  mux_writer.rs  nv_import.rs  opts.rs  va_import.rs
src/ops/: build_argv.rs  gpu_info.rs  health.rs  list_application_audio.rs  list_monitors.rs  list_profiles.rs  list_windows.rs  mod.rs  start.rs  state.rs  stop.rs
src/system/: drm.rs  mod.rs  tls.rs
test/: docker-compose.yml  mediamtx.yml
